ircv3_parse_derive/tests/ui/fail/unnamed_missing_value_fail.stderr
error: required `tag` value
 --> tests/ui/fail/unnamed_missing_value_fail.rs:4:30
  |
4 | struct MissingTagValue(#[irc(tag)] String);
  |                              ^^^

error: required `tag_flag` value
 --> tests/ui/fail/unnamed_missing_value_fail.rs:7:34
  |
7 | struct MissingTagFlagValue(#[irc(tag_flag)] String);
  |                                  ^^^^^^^^
